--- a/src/app/meal-plan/meal-plan.component.css
+++ b/src/app/meal-plan/meal-plan.component.css
@@ -88,12 +88,11 @@
   
   .recipe-image {
     width: 100%;
-    /* Ensures the image fills its container */
+
     height: 260px;
-    /* Adjust the height as needed */
+   
     border-radius: 15px;
     object-fit: fill;
-    /* Ensures the image covers its container */
   }
   
   .recipe-name {
@@ -128,9 +127,9 @@
     bottom: 0;
     right: 0;
     text-align: right;
-    /* Align text to the right */
+  
     vertical-align: bottom;
-    /* Align text to the top */
+   
   }
   
   .rating {
@@ -140,11 +139,11 @@
     bottom: 0;
     right: 0;
     text-align: right;
-    /* Align text to the right */
+   
     vertical-align: bottom;
   }
   
   
   .selectedRec {
-    border: 2px solid #39DB4A; /* Example border style */
+    border: 2px solid #39DB4A; 
   }
