--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -7,29 +7,29 @@
   }
   
   .divider {
-    border-top: 1px solid #ddd; /* Adjust the color and style as needed */
-    margin: 20px 0; /* Add margin for spacing */
+    border-top: 1px solid #ddd; 
+    margin: 20px 0;
     margin-top: -20px;
   }
   
-  .recipes { /* Changed "posts" to "recipes" */
+  .recipes { 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
     padding: 10px 40px 10px 40px;
   }
   
-  .recipe { /* Changed "post" to "recipe" */
+  .recipe {
     border: 1px solid #ddd;
     border-radius: 15px;
   
   }
   
-  .recipe-image { /* Changed "post-image" to "recipe-image" */
-    width: 100%; /* Ensures the image fills its container */
-    height: 260px; /* Adjust the height as needed */
+  .recipe-image { 
+    width: 100%; 
+    height: 260px;
     border-radius: 15px;
-    object-fit: fill; /* Ensures the image covers its container */
+    object-fit: fill; 
   }
   
   .recipe-name{
@@ -38,7 +38,7 @@
     font-size: 20px;
   }
   
-  .recipe-country { /* Changed "post-caption" to "recipe-caption" */
+  .recipe-country { 
     padding-left: 10px;
     margin-top: -10px;
     font-size: 16px;
